@@ -23,8 +23,8 @@ subaddress
 vacation
 body
 copy
-spamtest (Vladislav Bogdanov - cyrus-imapd patch
-          http://bubble.nsys.by/projects/patches/cyrus-imapd/)
+spamtest
+virustest
 variables
 date
 
