@@ -103,7 +103,7 @@ $labels['raw'] = 'Raw';
 $labels['text'] = 'Text';
 $labels['other'] = 'Altre';
 $labels['bodycontentpart'] = 'Contingut';
-$labels['spamnotchecked'] = 'no seleccionat';
+$labels['notchecked'] = 'no seleccionat';
 $labels['spamlevelisgreaterthanequal'] = '&eacutes major o igual que';
 $labels['spamlevelislessthanequal'] = '&eacutes menor o igual que';
 $labels['spamlevelequals'] = '&eacutes igual a';
