@@ -103,7 +103,7 @@ $labels['raw'] = 'Surové';
 $labels['text'] = 'Textové';
 $labels['other'] = 'Ostatní';
 $labels['bodycontentpart'] = 'Obsahová část';
-$labels['spamnotchecked'] = 'Nekontrolováno';
+$labels['notchecked'] = 'Nekontrolováno';
 $labels['spamlevelisgreaterthanequal'] = 'je větší nebo rovno';
 $labels['spamlevelislessthanequal'] = 'je menší nebo rovno';
 $labels['spamlevelequals'] = 'je rovno';
