@@ -107,7 +107,7 @@ $labels['raw'] = 'Raw';
 $labels['text'] = 'Text';
 $labels['other'] = 'Anderes';
 $labels['bodycontentpart'] = 'Content Part';
-$labels['spamnotchecked'] = 'nicht geprüft';
+$labels['notchecked'] = 'nicht geprüft';
 $labels['spamlevelisgreaterthanequal'] = 'ist mindestens';
 $labels['spamlevelislessthanequal'] = 'ist höchstens';
 $labels['spamlevelequals'] = 'ist gleich';
