@@ -107,7 +107,7 @@ $labels['raw'] = 'Raw';
 $labels['text'] = 'Text';
 $labels['other'] = 'Other';
 $labels['bodycontentpart'] = 'Content Part';
-$labels['spamnotchecked'] = 'not checked';
+$labels['notchecked'] = 'not checked';
 $labels['spamlevelisgreaterthanequal'] = 'is greater than or equal to';
 $labels['spamlevelislessthanequal'] = 'is less than or equal to';
 $labels['spamlevelequals'] = 'is equal to';
@@ -126,6 +126,12 @@ $labels['copytoruleset'] = 'Copy filter to another ruleset';
 $labels['copyfromruleset'] = 'Copy filters from existing ruleset';
 $labels['time'] = 'Time';
 $labels['weekday'] = 'Weekday';
+$labels['virustest'] = 'Virus Probability';
+$labels['novirus'] = 'no virus found';
+$labels['virusremoved'] = 'virus found and removed';
+$labels['viruscured'] = 'virus found and cured';
+$labels['possiblevirus'] = 'message possibly contains a virus';
+$labels['definitevirus'] = 'message defiantly contains a virus';
 
 $messages = array();
 $messages['nosieverules'] = 'No filters found.';
