@@ -107,7 +107,7 @@ $labels['raw'] = 'Raw';
 $labels['text'] = 'Texto';
 $labels['other'] = 'Otro';
 $labels['bodycontentpart'] = 'Contenido';
-$labels['spamnotchecked'] = 'no seleccionado';
+$labels['notchecked'] = 'no seleccionado';
 $labels['spamlevelisgreaterthanequal'] = 'es mayor o igual que';
 $labels['spamlevelislessthanequal'] = 'es menor o igual que';
 $labels['spamlevelequals'] = 'es igual a';
