@@ -107,7 +107,7 @@ $labels['raw'] = 'Brut';
 $labels['text'] = 'Texte';
 $labels['other'] = 'Autre';
 $labels['bodycontentpart'] = 'Contenu';
-$labels['spamnotchecked'] = 'non coché';
+$labels['notchecked'] = 'non coché';
 $labels['spamlevelisgreaterthanequal'] = 'plus grande ou égale à';
 $labels['spamlevelislessthanequal'] = 'plus petite ou égale à';
 $labels['spamlevelequals'] = 'est égale à';
