@@ -107,7 +107,7 @@ $labels['raw'] = 'Raw';
 $labels['text'] = 'Testo';
 $labels['other'] = 'Altro';
 $labels['bodycontentpart'] = 'Contenuto del corpo';
-$labels['spamnotchecked'] = 'non etichettato';
+$labels['notchecked'] = 'non etichettato';
 $labels['spamlevelisgreaterthanequal'] = '&egrave; maggiore o uguale a';
 $labels['spamlevelislessthanequal'] = '&egrave; minore o uguale a';
 $labels['spamlevelequals'] = '&grave; uguale a';
