@@ -103,7 +103,7 @@ $labels['raw'] = 'Raw';
 $labels['text'] = 'Text';
 $labels['other'] = 'Inny';
 $labels['bodycontentpart'] = 'Zawartość części';
-$labels['spamnotchecked'] = 'nie sprawdza';
+$labels['notchecked'] = 'nie sprawdza';
 $labels['spamlevelisgreaterthanequal'] = 'jest większa lub równa';
 $labels['spamlevelislessthanequal'] = 'jest mniejsza lub równa';
 $labels['spamlevelequals'] = 'jest równa';
