@@ -107,7 +107,7 @@ $labels['raw'] = 'Raw';
 $labels['text'] = 'Texto';
 $labels['other'] = 'Outro';
 $labels['bodycontentpart'] = 'Parte Conteúdo';
-$labels['spamnotchecked'] = 'não verificado';
+$labels['notchecked'] = 'não verificado';
 $labels['spamlevelisgreaterthanequal'] = 'é maior ou igual a';
 $labels['spamlevelislessthanequal'] = 'é menor ou igual a';
 $labels['spamlevelequals'] = 'é igual a';
