@@ -103,7 +103,7 @@ $labels['raw'] = 'Brut';
 $labels['text'] = 'Text';
 $labels['other'] = 'Altul';
 $labels['bodycontentpart'] = 'Conţinut';
-$labels['spamnotchecked'] = 'neverificat';
+$labels['notchecked'] = 'neverificat';
 $labels['spamlevelisgreaterthanequal'] = 'este mai mare sau egal cu';
 $labels['spamlevelislessthanequal'] = 'este mai mic sau egal cu';
 $labels['spamlevelequals'] = 'este egal cu';
