@@ -105,7 +105,7 @@ $labels['raw'] = 'в исходнике';
 $labels['text'] = 'в тексте';
 $labels['other'] = 'часть сообщения';
 $labels['bodycontentpart'] = 'MIME-тип части сообщения';
-$labels['spamnotchecked'] = 'не проверено';
+$labels['notchecked'] = 'не проверено';
 $labels['spamlevelisgreaterthanequal'] = 'больше чем или равна';
 $labels['spamlevelislessthanequal'] = 'меньше чем или равна';
 $labels['spamlevelequals'] = 'равна';
