@@ -103,7 +103,7 @@ $labels['raw'] = 'Hrubé';
 $labels['text'] = 'Text';
 $labels['other'] = 'Iné';
 $labels['bodycontentpart'] = 'Obsah správy';
-$labels['spamnotchecked'] = 'nekontrolovaný';
+$labels['notchecked'] = 'nekontrolovaný';
 $labels['spamlevelisgreaterthanequal'] = 'je väčší, alebo rovný ako';
 $labels['spamlevelislessthanequal'] = 'je menší, alebo rovný ako';
 $labels['spamlevelequals'] = 'je rovný';
