@@ -107,7 +107,7 @@ $labels['raw'] = 'Surovo';
 $labels['text'] = 'Besedilo';
 $labels['other'] = 'Drugo';
 $labels['bodycontentpart'] = 'Del vsebine';
-$labels['spamnotchecked'] = 'ni pregledano';
+$labels['notchecked'] = 'ni pregledano';
 $labels['spamlevelisgreaterthanequal'] = 'je večja ali enaka';
 $labels['spamlevelislessthanequal'] = 'je manjša ali enaka';
 $labels['spamlevelequals'] = 'je enaka';
