@@ -103,7 +103,7 @@ $labels['raw'] = 'Raw';
 $labels['text'] = 'Text';
 $labels['other'] = 'Annat';
 $labels['bodycontentpart'] = 'Innehållsdel';
-$labels['spamnotchecked'] = 'inte kontrollerat';
+$labels['notchecked'] = 'inte kontrollerat';
 $labels['spamlevelisgreaterthanequal'] = 'är större än eller lika med';
 $labels['spamlevelislessthanequal'] = 'är mindre än eller lika med';
 $labels['spamlevelequals'] = 'är lika med';
